Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,22 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ceo'"
+       "'CEO'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "title=\"Ceo\" # 'CEO'"
+    "title=\"Ceo\" # 'CEO'\n",
+    "title.upper()"
    ]
   },
   {
