--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
     }
    ],
    "source": [
-    "email=\"art.vandelay@vandelay.co\" # False\n"
+    "email=\"art.vandelay@vandelay.co\" # False\n",
+    "email.endswi"
    ]
   },
   {
