--- a/index.ipynb
+++ b/index.ipynb
@@ -205,23 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'art.vandelay@vandelay.co'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-9c0980df263f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-9c0980df263f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    email.endswith(.com)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "email=\"art.vandelay@vandelay.co\" # False\n",
-    "email.endswi"
+    "email.endswith(.com)"
    ]
   },
   {
